# CodeHub-Desktop-Remake

./: .gitignore  CMakeLists.txt  main.cpp
include/cmd-parser/: CommandLineParser.h
include/cmd-utils/: Command.h  CommandExecutor.h  CommandLineParser.h  CommandRegistry.h  ICommand.h  IValidator.h  ValidatorBase.h
include/command/: AddCommand.h  BranchCommand.h  CheckoutCommand.h  Command.h  CommandExecutor.h  Commands.h  CommandsUtils.h  CommitCommand.h  ConfigCommand.h  HelpCommand.h  ICommand.h  InitCommand.h  LogCommand.h  RevertCommand.h  VersionCommand.h
include/command/utils/: CommandExecutor.h  CommandsUtils.h
include/lib/inferlib/: ConstexprMap.h  Printer.h
include/lib/inferlib/comparison/: Comparison.h
include/lib/inferlib/data_structure/: ConstexprMap.h
include/lib/inferlib/filesystem/: FilesystemUtils.h
include/lib/inferlib/printer/: Printer.h
include/logging/: Error.h
include/utils/: ConstexprMap.h  Types.h
include/utils/cmd/: CommandLineParser.h  IValidator.h  ParsedCommand.h
include/utils/config/: ConfigBuilder.h  ConfigFilenames.h  GlobalAppConfig.h  IniConfigWriter.h  VersionInfo.h
include/utils/error/: Error.h
include/utils/filesystem/: FilesystemUtils.h
include/utils/parser/: CommandLineParser.h  IValidator.h  IniConfigParser.h  ParsedCommand.h  ParsedIniFile.h  ParserUtils.h
include/utils/status/: Status.h
include/utils/validation/: CommandLineParserValidator.h  IniConfigValidator.h  ParserValidator.h  ValidatorChain.h
include/vcs/: VCSApplication.h
src/cmd-parser/: Command.cpp  CommandLineParser.cpp
src/cmd-utils/: CommandExecutor.cpp  CommandLineParser.cpp  CommandRegistry.cpp  ParsedCommand.cpp
src/command/: AddCommand.cpp  BranchCommand.cpp  CheckoutCommand.cpp  Command.cpp  CommandExecutor.cpp  CommitCommand.cpp  ConfigCommand.cpp  HelpCommand.cpp  InitCommand.cpp  LogCommand.cpp  RevertCommand.cpp  VersionCommand.cpp
src/command/utils/: CommandExecutor.cpp
src/lib/filesystem/: FilesystemUtils.cpp
src/utils/cmd/: CommandLineParser.cpp  ParsedCommand.cpp
src/utils/config/: GlobalAppConfig.cpp
src/utils/filesystem/: FilesystemUtils.cpp
src/utils/parser/: CommandLineParser.cpp  IniConfigParser.cpp  ParsedCommand.cpp  ParsedIniFile.cpp  ParserUtils.cpp
src/vcs/: VCSApplication.cpp
